backend/k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: backend-service
  labels:
    app.kubernetes.io/name: rgukt-connect-backend

spec:
  type: NodePort

  selector:
    app.kubernetes.io/name: rgukt-connect-backend

  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 32001
